# sum23-Py

./: Python Programming.xmind  README.md
F1-usingSQL/: pyproject.toml
F1-usingSQL/f1_usingsql/: drivers.csv  f1.db  f1_usingSQL.py  races.csv  schema.sql
http-requests/: pyproject.toml
http-requests/http_requests/: reqresp.py
notebooks/matplotlib-notebooks/: matplotlib-examples.ipynb  pyproject.toml
pythonProject/: hi.py  main.py
pythonProject1/: fib.py  fib_oo.py  main.py  main2.py
timesheet-utils-main/: .gitignore  README.md  pyproject.toml
timesheet-utils-main/timesheet_utils/: ts-lint.py
timesheet-utils-main/timesheet_utils/examples/: clean.csv  dirty.csv
