[tool.poetry]
name = "http-requests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "http_requests"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.scripts]
get = "http_requests.reqresp:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
