[tool.poetry]
name = "matplotlib-notebooks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "matplotlib_notebooks"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.5"
matplotlib = "^3.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
